--- a/product-analytics-e-commerce-business-transaction.ipynb
+++ b/product-analytics-e-commerce-business-transaction.ipynb
@@ -1,8 +1,54 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a737a29c",
+   "metadata": {},
+   "source": [
+    "# E-commerce Business Transaction Analytics\n",
+    "source : https://www.kaggle.com/datasets/gabrielramos87/an-online-shop-business"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3880ffe0",
+   "metadata": {},
+   "source": [
+    "### About Dataset\n",
+    "#### Context\n",
+    "E-commerce has become a new channel to support businesses development. Through e-commerce, businesses can get access and establish a wider market presence by providing cheaper and more efficient distribution channels for their products or services. E-commerce has also changed the way people shop and consume products and services. Many people are turning to their computers or smart devices to order goods, which can easily be delivered to their homes.\n",
+    "\n",
+    "#### Content\n",
+    "This is a sales transaction data set of UK-based e-commerce (online retail) for one year. This London-based shop has been selling gifts and homewares for adults and children through the website since 2007. Their customers come from all over the world and usually make direct purchases for themselves. There are also small businesses that buy in bulk and sell to other customers through retail outlet channels.<br>\n",
+    "\n",
+    "The data set contains 500K rows and 8 columns. The following is the description of each column.\n",
+    "\n",
+    "<strong>1. TransactionNo (categorical):</strong> a six-digit unique number that defines each transaction. The letter “C” in the code indicates a cancellation.<br>\n",
+    "<strong>2. Date (numeric):</strong> the date when each transaction was generated.<br>\n",
+    "<strong>3. ProductNo (categorical):</strong> a five or six-digit unique character used to identify a specific product.<br>\n",
+    "<strong>4. Product (categorical):</strong> product/item name.<br>\n",
+    "<strong>5. Price (numeric):</strong> the price of each product per unit in pound sterling (£).<br>\n",
+    "<strong>6. Quantity (numeric):</strong> the quantity of each product per transaction. Negative values related to cancelled transactions.<br>\n",
+    "<strong>7. CustomerNo (categorical):</strong> a five-digit unique number that defines each customer.<br>\n",
+    "<strong>8. Country (categorical):</strong> name of the country where the customer resides.<br>\n",
+    "\n",
+    "There is a small percentage of order cancellation in the data set. Most of these cancellations were due to out-of-stock conditions on some products. Under this situation, customers tend to cancel an order as they want all products delivered all at once.<br>\n",
+    "\n",
+    "#### Inspiration\n",
+    "Information is a main asset of businesses nowadays. The success of a business in a competitive environment depends on its ability to acquire, store, and utilize information. Data is one of the main sources of information. Therefore, data analysis is an important activity for acquiring new and useful information. Analyze this dataset and try to answer the following questions.<br>\n",
+    "\n",
+    "1. How was the sales trend over the months?<br>\n",
+    "2. What are the most frequently purchased products?<br>\n",
+    "3. How many products does the customer purchase in each transaction?<br>\n",
+    "4. What are the most profitable segment customers?<br>\n",
+    "5. Based on your findings, what strategy could you recommend to the business to gain more profit?<br>\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "d3faa24e",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -24,23 +70,12 @@
    },
    "outputs": [],
    "source": [
-    "# This Python 3 environment comes with many helpful analytics libraries installed\n",
-    "# It is defined by the kaggle/python Docker image: https://github.com/kaggle/docker-python\n",
-    "# For example, here's several helpful packages to load\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
-    "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+    "import warnings\n",
     "\n",
-    "# Input data files are available in the read-only \"../input/\" directory\n",
-    "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
-    "\n",
-    "import os\n",
-    "for dirname, _, filenames in os.walk('/kaggle/input'):\n",
-    "    for filename in filenames:\n",
-    "        print(os.path.join(dirname, filename))\n",
-    "\n",
-    "# You can write up to 20GB to the current directory (/kaggle/working/) that gets preserved as output when you create a version using \"Save & Run All\" \n",
-    "# You can also write temporary files to /kaggle/temp/, but they won't be saved outside of the current session"
+    "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)"
    ]
   },
   {
@@ -171,6 +206,7 @@
     }
    ],
    "source": [
+    "#data= pd.read_csv('/kaggle/input/an-online-shop-business/Sales Transaction v.4a.csv')\n",
     "data= pd.read_csv('./Data/Sales Transaction v.4a.csv')\n",
     "data.head()"
    ]
